--- a/T365CalculatorScreens/NetSheetReports/NetSheetReport.storyboard
+++ b/T365CalculatorScreens/NetSheetReports/NetSheetReport.storyboard
@@ -114,7 +114,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="jfE-16-GRo" kind="showDetail" action="showViewController:sender:" id="vb9-LK-Lgu"/>
+                                            <segue destination="9vF-nB-cgV" kind="showDetail" identifier="Prepared For" action="showViewController:sender:" id="yT6-17-484"/>
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="AYp-wC-Y4F" userLabel="Prepared By Cell">
@@ -137,10 +137,10 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="9vF-nB-cgV" kind="showDetail" action="showViewController:sender:" id="gnh-b3-EPv"/>
+                                            <segue destination="9vF-nB-cgV" kind="showDetail" identifier="Prepared By" action="showViewController:sender:" id="gnh-b3-EPv"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="WVl-wg-SWv" userLabel="Logo Cell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Logo" id="WVl-wg-SWv" userLabel="Logo Cell">
                                         <rect key="frame" x="0.0" y="100" width="600" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WVl-wg-SWv" id="88d-jg-nND">
@@ -160,7 +160,7 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="EOL-j9-4If" kind="showDetail" action="showViewController:sender:" id="Wxa-qs-uVM"/>
+                                            <segue destination="EOL-j9-4If" kind="showDetail" identifier="Logo" action="showViewController:sender:" id="Wxa-qs-uVM"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
@@ -240,12 +240,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hfq-Sn-MKS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2665" y="134.5"/>
+            <point key="canvasLocation" x="2626" y="477"/>
         </scene>
-        <!--Prepared By Controller-->
+        <!--Prepared For By Controller-->
         <scene sceneID="VTR-L2-ADc">
             <objects>
-                <tableViewController id="9vF-nB-cgV" customClass="PreparedByController" customModule="T365CalculatorScreens" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="9vF-nB-cgV" customClass="PreparedForByController" customModule="T365CalculatorScreens" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" id="opX-dd-Nnx" userLabel="PreparedByForm">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -612,6 +612,7 @@
                             <outlet property="delegate" destination="9vF-nB-cgV" id="4Us-UC-qqw"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="brS-MZ-j5R"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="addressField" destination="zRL-Q3-nbo" id="Eb7-9o-cRZ"/>
@@ -619,84 +620,20 @@
                         <outlet property="companyField" destination="OqH-cE-zNf" id="88N-2P-8RQ"/>
                         <outlet property="emailField" destination="RcS-Jv-9oF" id="pM7-ZA-Q88"/>
                         <outlet property="firstNameField" destination="D6y-kb-omR" id="T6o-08-Qwr"/>
-                        <outlet property="includePreparedBySwitch" destination="rhE-ee-JaI" id="5va-pB-BNh"/>
+                        <outlet property="includePreparedForBySwitch" destination="rhE-ee-JaI" id="pOo-ov-0Ro"/>
                         <outlet property="lastNameField" destination="tuC-z4-xwc" id="zZ1-Gx-QfW"/>
                         <outlet property="phoneNumberField" destination="mbV-G0-APN" id="WSp-GW-Wd4"/>
+                        <outlet property="preparedForByTitle" destination="SJH-fp-Dos" id="GZx-gc-hio"/>
                         <outlet property="stateField" destination="DRn-mC-iRB" id="0fG-vc-Fyl"/>
                         <outlet property="zipCodeField" destination="Ige-Pq-Jtk" id="ne8-0Q-6OP"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bxn-qe-Ca9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2054" y="545"/>
-        </scene>
-        <!--Prepared For Controller-->
-        <scene sceneID="Nce-Kq-dA3">
-            <objects>
-                <tableViewController id="jfE-16-GRo" customClass="PreparedForController" customModule="T365CalculatorScreens" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" id="lBU-mo-fRF" userLabel="PreparedForForm">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <sections>
-                            <tableViewSection id="BeW-eN-xDg">
-                                <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="rC2-qv-lB6">
-                                        <rect key="frame" x="0.0" y="44" width="600" height="60"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rC2-qv-lB6" id="eRQ-PG-3Ch">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Include Prepared For" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ioM-ht-4f2">
-                                                    <rect key="frame" x="15" y="19" width="160" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fMw-Bg-8yF">
-                                                    <rect key="frame" x="543" y="14" width="51" height="31"/>
-                                                    <color key="onTintColor" red="0.0" green="0.53333333329999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                </switch>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="ioM-ht-4f2" firstAttribute="leading" secondItem="eRQ-PG-3Ch" secondAttribute="leading" constant="15" id="WXh-Q8-xoj"/>
-                                                <constraint firstItem="fMw-Bg-8yF" firstAttribute="centerY" secondItem="ioM-ht-4f2" secondAttribute="centerY" id="fEq-Ml-Dlz"/>
-                                                <constraint firstItem="ioM-ht-4f2" firstAttribute="centerY" secondItem="eRQ-PG-3Ch" secondAttribute="centerY" id="gc4-fp-b2P"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="fMw-Bg-8yF" secondAttribute="trailing" id="zxg-av-ZrD"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="5qD-Ck-Yec">
-                                        <rect key="frame" x="0.0" y="104" width="600" height="60"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5qD-Ck-Yec" id="rQ0-aR-wJa">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="25v-QK-Nh9">
-                                        <rect key="frame" x="0.0" y="164" width="600" height="60"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="25v-QK-Nh9" id="z4D-JP-g9b">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                        </sections>
-                        <connections>
-                            <outlet property="dataSource" destination="jfE-16-GRo" id="Hvl-RF-qfJ"/>
-                            <outlet property="delegate" destination="jfE-16-GRo" id="iJA-q7-rKO"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="bqy-Q1-x26"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="EPz-5Y-nag" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2871" y="252"/>
+            <point key="canvasLocation" x="2086" y="626.5"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="gnh-b3-EPv"/>
+    </inferredMetricsTieBreakers>
 </document>
