--- a/T365CalculatorScreens/Base.lproj/SellerNetSheet.storyboard
+++ b/T365CalculatorScreens/Base.lproj/SellerNetSheet.storyboard
@@ -147,7 +147,153 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dzV-3C-x5D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1586" y="951"/>
+            <point key="canvasLocation" x="1469" y="1176"/>
+        </scene>
+        <!--Property Tax Rate Controller-->
+        <scene sceneID="wfp-yv-R6L">
+            <objects>
+                <viewController id="QSn-OO-mAe" customClass="PropertyTaxRateController" customModule="T365CalculatorScreens" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VqQ-Ly-hMx"/>
+                        <viewControllerLayoutGuide type="bottom" id="v0G-c6-em7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="RZZ-tR-wSr">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="348"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MZ2-Cf-Azp" userLabel="Header View">
+                                <rect key="frame" x="0.0" y="64" width="600" height="127"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="127" id="Fyi-iz-mCW"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="FHh-u3-K0e" kind="embed" id="XQR-KG-gm1"/>
+                                </connections>
+                            </containerView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="55" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EOR-wH-E54">
+                                <rect key="frame" x="0.0" y="228" width="600" height="120"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaxRateCell" rowHeight="55" id="b5g-Tl-3LC" customClass="TaxRateCell" customModule="T365CalculatorScreens" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="55"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="b5g-Tl-3LC" id="SX2-g1-rqO">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="55"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a8L-Pk-erG">
+                                                    <rect key="frame" x="555" y="15" width="25" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="25" id="Lsl-f4-dWi"/>
+                                                        <constraint firstAttribute="height" constant="25" id="bNn-At-1NL"/>
+                                                    </constraints>
+                                                    <state key="normal" image="circularCheck"/>
+                                                    <state key="selected" image="circularUncheck"/>
+                                                </button>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="faa-1a-oxh" userLabel="TaxRateUnderline">
+                                                    <rect key="frame" x="445" y="39" width="90" height="1"/>
+                                                    <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="90" id="LYi-GJ-XU5"/>
+                                                        <constraint firstAttribute="height" constant="1" id="jx9-wy-bsM"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FOJ-Z3-yfa">
+                                                    <rect key="frame" x="445" y="16" width="13" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1.17901" placeholder="0.00" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k3w-MB-uUF">
+                                                    <rect key="frame" x="466" y="15" width="69" height="21"/>
+                                                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                                </textField>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="THG-Ms-opf" userLabel="NameUnderline">
+                                                    <rect key="frame" x="15" y="39" width="412" height="1"/>
+                                                    <color key="backgroundColor" red="0.86666666670000003" green="0.86666666670000003" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="MaL-rG-jgU"/>
+                                                    </constraints>
+                                                </view>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="San Diego, CA" placeholder="Enter Country Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XiY-NT-Ybg">
+                                                    <rect key="frame" x="15" y="15" width="412" height="21"/>
+                                                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="k3w-MB-uUF" firstAttribute="leading" secondItem="FOJ-Z3-yfa" secondAttribute="trailing" constant="8" id="31p-mL-CUs"/>
+                                                <constraint firstItem="XiY-NT-Ybg" firstAttribute="leading" secondItem="THG-Ms-opf" secondAttribute="leading" id="6Fu-MJ-c4X"/>
+                                                <constraint firstItem="a8L-Pk-erG" firstAttribute="centerY" secondItem="SX2-g1-rqO" secondAttribute="centerY" id="BKz-1F-aKa"/>
+                                                <constraint firstItem="faa-1a-oxh" firstAttribute="baseline" secondItem="a8L-Pk-erG" secondAttribute="baseline" constant="2" id="DLD-H0-kf4"/>
+                                                <constraint firstItem="XiY-NT-Ybg" firstAttribute="trailing" secondItem="THG-Ms-opf" secondAttribute="trailing" id="JTQ-P8-Qsg"/>
+                                                <constraint firstItem="FOJ-Z3-yfa" firstAttribute="leading" secondItem="faa-1a-oxh" secondAttribute="leading" id="T6w-x8-tWQ"/>
+                                                <constraint firstItem="THG-Ms-opf" firstAttribute="centerY" secondItem="faa-1a-oxh" secondAttribute="centerY" id="VPa-rA-fzB"/>
+                                                <constraint firstItem="faa-1a-oxh" firstAttribute="leading" secondItem="THG-Ms-opf" secondAttribute="trailing" constant="18" id="XbP-8r-qr5"/>
+                                                <constraint firstItem="XiY-NT-Ybg" firstAttribute="baseline" secondItem="FOJ-Z3-yfa" secondAttribute="baseline" id="Xzu-fL-Eob"/>
+                                                <constraint firstItem="THG-Ms-opf" firstAttribute="leading" secondItem="SX2-g1-rqO" secondAttribute="leading" constant="15" id="Ybk-Z2-9tV"/>
+                                                <constraint firstItem="k3w-MB-uUF" firstAttribute="baseline" secondItem="FOJ-Z3-yfa" secondAttribute="baseline" id="c7g-oV-eow"/>
+                                                <constraint firstItem="faa-1a-oxh" firstAttribute="top" secondItem="FOJ-Z3-yfa" secondAttribute="bottom" constant="2.5" id="dad-HV-Dqp"/>
+                                                <constraint firstItem="k3w-MB-uUF" firstAttribute="trailing" secondItem="faa-1a-oxh" secondAttribute="trailing" id="rjv-K4-BXi"/>
+                                                <constraint firstAttribute="trailing" secondItem="a8L-Pk-erG" secondAttribute="trailing" constant="20" id="sNR-45-NF4"/>
+                                                <constraint firstItem="a8L-Pk-erG" firstAttribute="leading" secondItem="faa-1a-oxh" secondAttribute="trailing" constant="20" id="tWA-0h-LTY"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="cityStateName" destination="XiY-NT-Ybg" id="pAe-n6-rLW"/>
+                                            <outlet property="taxRate" destination="k3w-MB-uUF" id="Vha-FI-KC2"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="QSn-OO-mAe" id="5CK-87-5AB"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nmt-43-sJn">
+                                <rect key="frame" x="0.0" y="0.0" width="38" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.51372549020000002" green="0.51372549020000002" blue="0.51372549020000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tax Rate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vyQ-yQ-Wn4">
+                                <rect key="frame" x="457" y="211" width="56" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.51372549020000002" green="0.51372549020000002" blue="0.51372549020000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3lf-UN-Kim">
+                                <rect key="frame" x="15" y="211" width="38" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.51372549019607838" green="0.51372549019607838" blue="0.51372549019607838" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="EOR-wH-E54" firstAttribute="top" secondItem="3lf-UN-Kim" secondAttribute="bottom" id="3mW-JA-wp3"/>
+                            <constraint firstAttribute="trailing" secondItem="vyQ-yQ-Wn4" secondAttribute="trailing" constant="87" id="56E-vH-Ulr"/>
+                            <constraint firstItem="3lf-UN-Kim" firstAttribute="top" secondItem="MZ2-Cf-Azp" secondAttribute="bottom" constant="20" id="CTC-qL-8lV"/>
+                            <constraint firstItem="v0G-c6-em7" firstAttribute="top" secondItem="EOR-wH-E54" secondAttribute="bottom" id="MdO-zS-RTW"/>
+                            <constraint firstItem="MZ2-Cf-Azp" firstAttribute="top" secondItem="RZZ-tR-wSr" secondAttribute="top" constant="64" id="SG7-LE-J4a"/>
+                            <constraint firstItem="MZ2-Cf-Azp" firstAttribute="leading" secondItem="RZZ-tR-wSr" secondAttribute="leading" id="ZTM-lj-Kb7"/>
+                            <constraint firstItem="3lf-UN-Kim" firstAttribute="leading" secondItem="RZZ-tR-wSr" secondAttribute="leading" constant="15" id="cFv-rl-npe"/>
+                            <constraint firstItem="EOR-wH-E54" firstAttribute="leading" secondItem="RZZ-tR-wSr" secondAttribute="leading" id="euK-r0-YEn"/>
+                            <constraint firstItem="vyQ-yQ-Wn4" firstAttribute="baseline" secondItem="3lf-UN-Kim" secondAttribute="baseline" id="umQ-N2-3M1"/>
+                            <constraint firstAttribute="trailing" secondItem="EOR-wH-E54" secondAttribute="trailing" id="w3J-dT-Njp"/>
+                            <constraint firstAttribute="trailing" secondItem="MZ2-Cf-Azp" secondAttribute="trailing" id="wif-mv-Tql"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="wq5-LD-IcM">
+                        <barButtonItem key="backBarButtonItem" title=" " id="OaT-Sw-ihJ"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6j3-Tw-DSW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2594" y="675"/>
         </scene>
         <!--Taxes Form-->
         <scene sceneID="eF3-iN-M9Q">
@@ -297,6 +443,9 @@
                                                 <constraint firstItem="E5B-8B-dp3" firstAttribute="leading" secondItem="tKH-mp-7YF" secondAttribute="leading" id="sWL-u2-96U"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="QSn-OO-mAe" kind="show" id="a34-b1-FRW"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="gs1-DX-3by" userLabel="Annual Property Taxes Cell">
                                         <rect key="frame" x="0.0" y="300" width="600" height="75"/>
@@ -1512,10 +1661,12 @@
         </scene>
     </scenes>
     <resources>
+        <image name="circularCheck" width="22" height="22"/>
+        <image name="circularUncheck" width="24" height="24"/>
         <image name="infoIcon" width="32" height="32"/>
         <image name="locationArrow" width="15" height="16"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="bRB-l4-e2l"/>
+        <segue reference="XQR-KG-gm1"/>
     </inferredMetricsTieBreakers>
 </document>
